dataset1235/2025-2/1153765216/users/3158098637/executions/2747719322_1626817775.log
== RUN (2025-08-21 18:27:49)
-- CODE: 
r = float(input("Raio:"))
import math
print(round((math.pi*r**2),3))
print(round((4/3*math.pi*r**3),3))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 19:55:20)
-- CODE: 
r = float(input("Raio:"))
from module import math
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from module import math
ModuleNotFoundError: No module named 'module'
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from module import math
ModuleNotFoundError: No module named 'module'
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from module import math
ModuleNotFoundError: No module named 'module'
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from module import math
ModuleNotFoundError: No module named 'module'
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from module import math
ModuleNotFoundError: No module named 'module'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from module import math
ModuleNotFoundError: No module named 'module'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:11:06)
-- CODE: 
r = float(input("Raio:"))
from math import pi
print(math.pi)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(math.pi)
          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(math.pi)
          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(math.pi)
          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(math.pi)
          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(math.pi)
          ^^^^
NameError: name 'math' is not defined
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(math.pi)
          ^^^^
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:09:13)
-- CODE: 
r = float(input("Raio:"))
from module import math
print(math.pi)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from module import math
ModuleNotFoundError: No module named 'module'
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from module import math
ModuleNotFoundError: No module named 'module'
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from module import math
ModuleNotFoundError: No module named 'module'
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from module import math
ModuleNotFoundError: No module named 'module'
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from module import math
ModuleNotFoundError: No module named 'module'
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    from module import math
ModuleNotFoundError: No module named 'module'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:26:04)
-- CODE: 
r = float(input("Raio:"))
import math
print(round(math.pi*r**2),3)
print(round(4/3*math.pi*r**3),3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0 3
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
382 3
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871 3
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575 3
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110 3
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
34 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:27:56)
-- CODE: 
r = float(input("Raio:"))
import math
print(round((math.pi*r**2),3))
print(round((4/3*math.pi*r**3),3))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0.004
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
381.704
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871.076
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575.28
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110.151
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
33.51
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:22:32)
-- CODE: 
r = float(input("Raio:"))
import math
print(round((math.pi*r**2),2)
print(round(4/3*math.pi*r**3,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 3
    print(round((math.pi*r**2),2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 3
    print(round((math.pi*r**2),2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 3
    print(round((math.pi*r**2),2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 3
    print(round((math.pi*r**2),2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 3
    print(round((math.pi*r**2),2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 3
    print(round((math.pi*r**2),2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:25:44)
-- CODE: 
r = float(input("Raio:"))
import math
print(round(math.pi*r**2),2)
print(round(4/3*math.pi*r**3),2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0 2
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
382 2
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871 2
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575 2
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110 2
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
34 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:22:31)
-- CODE: 
r = float(input("Raio:"))
import math
print(round((math.pi*r**2),2)
print(round(4/3*math.pi*r**3,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 3
    print(round((math.pi*r**2),2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 3
    print(round((math.pi*r**2),2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 3
    print(round((math.pi*r**2),2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 3
    print(round((math.pi*r**2),2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 3
    print(round((math.pi*r**2),2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 3
    print(round((math.pi*r**2),2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:26:00)
-- CODE: 
r = float(input("Raio:"))
import math
print(round(math.pi*r**2),3)
print(round(4/3*math.pi*r**3),3)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0 3
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
382 3
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871 3
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575 3
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110 3
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
34 3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:23:05)
-- CODE: 
r = float(input("Raio:"))
import math
print((round((math.pi*r**2),2))
print((round(4/3*math.pi*r**3,2)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 3
    print((round((math.pi*r**2),2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 3
    print((round((math.pi*r**2),2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 3
    print((round((math.pi*r**2),2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 3
    print((round((math.pi*r**2),2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 3
    print((round((math.pi*r**2),2))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 3
    print((round((math.pi*r**2),2))
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:25:30)
-- CODE: 
r = float(input("Raio:"))
import math
print(round(math.pi*r**2),2)
print(round(4/3*math.pi*r**3),2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
0 2
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
382 2
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
7871 2
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
5575 2
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
1279110 2
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
34 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:11:23)
-- CODE: 
r = float(input("Raio:"))
import math
print(math.pi)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
---- user output:
Raio:3.141592653589793
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
Raio:3.141592653589793
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
Raio:3.141592653589793
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
---- user output:
Raio:3.141592653589793
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
---- user output:
Raio:3.141592653589793
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
---- user output:
Raio:3.141592653589793
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:22:09)
-- CODE: 
r = float(input("Raio:"))
import math
print(round((math.pi*r**2),2)
print(round(4/3*math.pi*r**3),2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.1
---- correct output:
0.031
0.004
-- ERROR:
File "XXXX", line 3
    print(round((math.pi*r**2),2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
4.5

---- correct output:
63.617
381.704
-- ERROR:
File "XXXX", line 3
    print(round((math.pi*r**2),2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.34
---- correct output:
478.388
7871.076
-- ERROR:
File "XXXX", line 3
    print(round((math.pi*r**2),2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
11.0
---- correct output:
380.133
5575.28
-- ERROR:
File "XXXX", line 3
    print(round((math.pi*r**2),2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
67.34
---- correct output:
14246.104
1279110.151
-- ERROR:
File "XXXX", line 3
    print(round((math.pi*r**2),2)
         ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
2.0
---- correct output:
12.566
33.51
-- ERROR:
File "XXXX", line 3
    print(round((math.pi*r**2),2)
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
